IGNITE-28609 Fix CacheNoValueClassOnServerNodeTest on JDK 17